--- a/src/template/about.html
+++ b/src/template/about.html
@@ -4,30 +4,37 @@
 {% block content %}
 
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url(/static/img/about-bg.jpg)">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>Nosotros</h1>
-            <span class="subheading">Equipo de desarrolo web del Informatorio.</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
+<!-- Page Header -->
+<header class="masthead" style="background-image: url(/static/img/about-bg.jpg)">
+  <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <div class="page-heading">
+          <h1>Nosotros</h1>
+          <span class="subheading">Equipo de desarrolo web del Informatorio.</span>
+        </div>
       </div>
     </div>
   </div>
+</header>
 
-  {% endblock %}
+<!-- Main Content -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <p>Iniciar con en proyecto Django, fue todo un desafio. Pero bueno así es la vida del desarrollador hay días que
+        va todo bien, y días que ni hablar...</p>
+
+      <p>Quiero destacar que fuimos un equipo unido, proactivo, solidario y dispuestos. Pusimos muchas horas en este
+        sitio, no solo para que cumpla los requerimientos sino también para aprender y sentir como es trabajar en un
+        proyecto.
+      </p>
+
+      <p>Esperemos que lo disfruten. Gracias a mi equipo Luca ,Aquiles y Santiago.</p>
+      <p>Atentamente los saluda Paola Futura Desarrolladora Front end</p>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
